<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YanKon</string>
    <string name="title_section1">Lights</string>
    <string name="title_section2">Groups</string>
    <string name="title_section3">Scenes</string>
    <string name="title_section4">Schedule</string>
    <string name="title_section5">Actions</string>
    <string name="title_section6">Colors</string>
    <string name="title_section7">Account</string>
    <string name="title_section8">Settings</string>
    <string name="drawer_title">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="guide_skip">Skip</string>
    <string name="title_activity_multi_select_demo">MultiSelectDemoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_delete">Delete</string>
    <string name="delete_mode">Delete</string>
    <string name="searching">Searching…</string>
    <string name="menu_sort">Sort By</string>
    <string name="menu_new">New</string>
    <string name="title_activity_color_picker">Color Picker</string>
    <string name="color_name_hint">Color name</string>
    <string name="menu_delete">Delete</string>
    <string name="guide_done">Done</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_colon">Email:</string>
    <string name="password_colon">Password:</string>
    <string name="forget_password_question_mark"><u>Forget Password?</u></string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="log_in_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="log_out">Log Out</string>
    <string name="input_action_name">Input action name</string>
    <string name="edit_action">Edit Action</string>
    <string name="add_action">Add Action</string>
    <string name="set_light_name">Set light name</string>
    <string name="input_dialog_empty">The field is empty</string>
    <string name="light_model_format">Model: %s</string>
    <string name="group_num_format">Lights: %d</string>
    <string name="default_no_data">No data</string>
    <string name="title_activity_add_light_groups">AddLightGroupsActivity</string>
    <string name="group_name">Group name</string>
    <string name="empty_group_name">Group name cannot be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_name">Edit name</string>
    <string name="action_done">Done</string>
    <string name="edit_light_name">Edit light name</string>
    <string name="title_activity_light_info">Light Info</string>
    <string name="action_spinner_default">***Actions***</string>
    <string name="color_spinner_custom">Custom color</string>
    <string name="never_used">Never used</string>
    <string name="scene_name">Scene Name</string>
    <string name="Lights">Lights</string>
    <string name="light_groups">Groups</string>
    <string name="edit_group">Edit group</string>
    <string name="add_group">Create new group</string>
    <string name="empty_scene_name">Scene name cannot be empty</string>
    <string name="brightness">Brightness</string>
    <string name="ct">CT</string>
    <string name="exit_prompt">Are you sure to exit?</string>
    <string name="title_activity_add_schedule">Schedule</string>
    <string name="schedule_name">Schedule name</string>
    <string name="target_label">Target</string>
    <string name="none_target">None</string>
    <string name="schedule_settings">Settings</string>
    <string name="schedule_settings_format" formatted="false">State:%s BR:%d CT:%d</string>
    <string name="state_off">Off</string>
    <string name="state_on">On</string>
    <string name="title_activity_pick_target">Pick target</string>
    <string name="title_activity_add_lights2">Add Lights</string>
    <string name="action_select_all">Select all</string>
    <string name="action_addlights_done">Done</string>
    <string name="action_add_lights">Add lights</string>
    <string name="action_multiple">Multiple Mode</string>
    <string name="header_selected_lights">Selected lights</string>
    <string name="header_lights_amount">Lights: %d</string>
    <string name="lights_multiple_empty">Select at least 1 light first</string>
    <string name="lights_multiple_title_1light">1 light</string>
    <string name="lights_multiple_title">%d lights</string>
    <string name="scene">Scene</string>
    <string name="empty_schedule_name">Schedule name cannot be empty</string>
    <string name="empty_schedule_target">Pick target first</string>
    <string name="schedule_repeat_time">Repeat</string>
    <string name="repeat_none">None</string>
    <string name="title_activity_repeat_days">Repeat days</string>
    <string name="repeat_everyday">Everyday</string>
    <string name="profile_sync">Sync</string>
    <string name="scene_apply">Apply</string>
    <string name="sync_configurations">Sync Configurations</string>
    <string name="default_home_page">Default Home Page</string>
    <string name="action_show_mode">Show Mode</string>
    <string name="scene_last_used">Last used: %s</string>
    <string name="set_remote_pwd">Enable remote control</string>
    <string name="change_password">Change password</string>
    <string name="input_remotepwd_hint">4 digits password</string>
    <string name="input_remotepwd_title">Enable remote control</string>
    <string name="remotepwd_prompt">The password should be 4 digits</string>
    <string name="title_activity_change_password">Change password</string>
    <string name="change_password_hint">Leave blank if not change</string>
    <string name="scene_close_all">Close all</string>
    <string name="change_pwd_async_msg">Saving...</string>
    <string name="set_pwd_async_msg">Verifying password...</string>
    <string name="kii_extension_return_null">Cannot get server result</string>

</resources>
