<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.kii.yankon.fragments.LogInFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email_colon"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="textEmailAddress"
            android:id="@+id/email_edit"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password_colon"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="textPassword"
            android:id="@+id/password_edit"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/forgot_password"
            android:text="@string/forget_password_question_mark"
            android:textColor="@android:color/holo_blue_light"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">
        <Button
                android:id="@+id/button_log_in"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textAppearance="?android:attr/textAppearanceMedium"
                style="?android:attr/borderlessButtonStyle"
                />
        <View android:layout_width="40dp"
              android:layout_height="1dp"/>
        <Button
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceMedium"
                style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</LinearLayout>
